<resources>
    <string name="app_name">Deeplink</string>
    <string name="text_product_image_desc">Product Image</string>
    <string name="text_product_label">Cricket Ball Outdoors</string>
    <string name="text_product_brand">Brand : Wiki</string>
    <string name="text_product_price">$50</string>
    <string name="text_new_product_price">$25</string>
    <string name="text_promo_code_label">Use this promo code to get 50% discount</string>
    <string name="text_promo_code">ABCDE</string>
    <string name="text_offer_claimed">Congratulations! You have claimed the offer! Buy the Cricket ball at $25</string>
    <string name="text_claim_offer">Claim offer</string>
    <string name="text_deep_link_title">Claim Offer</string>
    <string name="text_buy_now">Buy Now</string>
    <string name="text_product_details">Product Details</string>
    <string name="text_go_back">Go back</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_place_order">Place Order</string>

</resources>