<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light">
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_order_details"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/text_go_back"
        android:textColor="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBack"
        android:layout_margin="5dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/text_place_order"
        android:textColor="@color/white" />
</RelativeLayout>