<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:contentPadding="16dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:src="@drawable/cricket_ball"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/text_product_image_desc"/>

            <TextView
                android:id="@+id/tvProductLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/text_product_label"
                app:layout_constraintTop_toBottomOf="@+id/imgProduct"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProductLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_product_brand"/>

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_product_price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@+id/imgProduct"
                app:layout_constraintEnd_toStartOf="@+id/tvNewProductPrice"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:id="@+id/tvNewProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_product_price"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/imgProduct"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPromo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvPromoCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_promo_code_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_promo_code"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPromoCodeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tvOfferClaimed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_offer_claimed"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cardPromo"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClaimOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_dark"
        android:textSize="16sp"
        android:text="@string/text_claim_offer"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvOfferClaimed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/discountGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="btnClaimOffer,cardPromo"/>


</androidx.constraintlayout.widget.ConstraintLayout>